adding update transaction by idx and nonce function
